--- a/public/stylesheets/scss/components/_feed.scss
+++ b/public/stylesheets/scss/components/_feed.scss
@@ -1,3 +1,7 @@
+#feed_view_mount_point {
+  margin-top: $sidebarSpacing;
+}
+
 .listingHighlight {
   text-decoration: none;
   &:hover {
